fix: gap between two components in css feat: add border image and modify shadows to better styling

--- a/src/pages/Home.css
+++ b/src/pages/Home.css
@@ -212,12 +212,12 @@ body {
 .hero-content {
     display: flex;
     flex-direction: column;
+    gap: 5%;
     width: 100%;
 }
 
 .hero-text {
     flex: 1;
-    margin-bottom: 24px;
 }
 
 .hero-text h1 {
@@ -245,7 +245,8 @@ body {
 .hero-image img {
     max-width: 100%;
     border-radius: 8px;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    box-shadow: 0 20px 10px rgba(0, 0, 0, 0.1);
+    border: solid 3px white;
 }
 
 /* Features Section */
